WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277480
[WPE] GPUProcess compilation broken after
r281630
https://bugs.webkit.org/show_bug.cgi?id=277480
Summary
[WPE] GPUProcess compilation broken after r281630
Alejandro G. Castro
Reported
2024-08-01 02:51:29 PDT
We need to add again that include, check conversation
https://github.com/WebKit/WebKit/commit/6506a6d390216da57713ec5ce543d5f9c6a918e2#r144860539
Attachments
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2024-08-01 02:52:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31593
Alejandro G. Castro
Comment 2
2024-11-19 04:06:13 PST
This was fixed by other PR.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug