[WPE] GPUProcess compilation broken after r281630 https://bugs.webkit.org/show_bug.cgi?id=277480

Reviewed by NOBODY (OOPS!).

Add include for undefined symbol.

* Source/WebKit/Shared/unix/AuxiliaryProcessMain.cpp: